--- a/views/secret.jade
+++ b/views/secret.jade
@@ -4,5 +4,5 @@ head
   meta(charset="UTF-8")
   title Secret
 body
-  h1 This is my awesome secret:
+  h1 This is #{role.toLowerCase()}'s awesome secret:
   p the secret is... there is no secret
